--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
-    "npx": "^3.0.0"
+    "npx": "^10.2.2",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
